@@ -1,6 +1,5 @@
 package com.qdischarge.clinicqueue.service;
 
-import com.qdischarge.clinicqueue.dto.HospitalDto;
 import com.qdischarge.clinicqueue.dto.TokenDto;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -11,6 +10,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
@@ -18,7 +18,11 @@ import java.util.Map;
  * Advanced/multi-counter package: dynamic look-ahead counter assignment.
  * Same "tokens" table and the same base queue (single source of truth,
  * intentionally *not* a forked copy of the schema/service -- see README) --
- * this is what turns on once a hospital's active_counters > 1.
+ * this is what turns on once a (hospital, category) department's
+ * active_counters > 1 (see HospitalDepartmentService). Counter numbers are
+ * scoped to that department: "Counter 1" of Cardiology and "Counter 1" of
+ * Orthopaedics at the same hospital are two different physical counters,
+ * every query below is scoped by (hospitalId, category) alongside counterId.
  *
  * Behavior, matching the product spec's worked example for 4 counters:
  * tokens 1-4 are assigned to counters 1-4 to start. When counter 3 (serving
@@ -31,6 +35,13 @@ import java.util.Map;
  *
  * Look-Ahead Window = 2 x active counters (informational: how many upcoming
  * waiting tokens the admin display board should show as "on deck").
+ *
+ * Reservations (see refreshReservations): while counters A, B, C are all mid-
+ * treatment, a distinct upcoming eligible token is earmarked to each one
+ * ("reserved_counter_id") and pinged "you're up next for Counter X" -- purely
+ * advisory display/notification, layered on top of the actual claim logic in
+ * QueueManagerService, which alone still decides who is genuinely served next
+ * once a counter frees up.
  */
 @Service
 @RequiredArgsConstructor
@@ -39,7 +50,7 @@ public class CounterAssignmentService {
 
     private final NamedParameterJdbcTemplate jdbc;
     private final QueueManagerService queueManagerService;
-    private final HospitalService hospitalService;
+    private final HospitalDepartmentService hospitalDepartmentService;
     private final WhatsAppService whatsAppService;
 
     private static final RowMapper<TokenDto> TOKEN_ROW_MAPPER = new BeanPropertyRowMapper<>(TokenDto.class);
@@ -47,67 +58,91 @@ public class CounterAssignmentService {
     public record CounterState(int counterId, TokenDto servingToken) {
     }
 
-    public record CounterBoard(int activeCounters, List<CounterState> counters, List<TokenDto> lookAhead) {
+    /** One busy counter's earmarked upcoming patient -- see refreshReservations. */
+    public record CounterReservation(int counterId, TokenDto token) {
     }
 
-    public CounterBoard getBoard() {
-        int activeCounters = activeCounters();
-        ensureInitialAssignment(activeCounters);
+    public record CounterBoard(int activeCounters, List<CounterState> counters, List<TokenDto> lookAhead,
+                                List<CounterReservation> upcoming) {
+    }
+
+    public CounterBoard getBoard(int hospitalId, String category) {
+        int activeCounters = hospitalDepartmentService.activeCounters(hospitalId, category);
+        ensureInitialAssignment(hospitalId, category, activeCounters);
+        refreshReservations(hospitalId, category, activeCounters);
 
         List<CounterState> counters = new ArrayList<>();
         for (int c = 1; c <= activeCounters; c++) {
             List<TokenDto> rows = jdbc.query(
-                    "SELECT * FROM tokens WHERE status = 'serving' AND counter_id = :c LIMIT 1",
-                    Map.of("c", c), TOKEN_ROW_MAPPER);
+                    """
+                    SELECT * FROM tokens WHERE status = 'serving' AND counter_id = :c
+                      AND hospital_id = :hospitalId AND category = :category LIMIT 1
+                    """,
+                    Map.of("c", c, "hospitalId", hospitalId, "category", category), TOKEN_ROW_MAPPER);
             counters.add(new CounterState(c, rows.isEmpty() ? null : rows.get(0)));
         }
 
         int lookAheadSize = 2 * activeCounters;
         List<TokenDto> lookAhead = jdbc.query(
-                "SELECT * FROM tokens WHERE status = 'waiting' ORDER BY COALESCE(priority_rank, id) ASC LIMIT :n",
-                Map.of("n", lookAheadSize), TOKEN_ROW_MAPPER);
+                """
+                SELECT * FROM tokens WHERE status = 'waiting' AND hospital_id = :hospitalId AND category = :category
+                ORDER BY COALESCE(priority_rank, id) ASC LIMIT :n
+                """,
+                Map.of("hospitalId", hospitalId, "category", category, "n", lookAheadSize), TOKEN_ROW_MAPPER);
 
-        return new CounterBoard(activeCounters, counters, lookAhead);
+        List<CounterReservation> upcoming = jdbc.query(
+                """
+                SELECT * FROM tokens WHERE status = 'waiting' AND reserved_counter_id IS NOT NULL
+                  AND hospital_id = :hospitalId AND category = :category
+                ORDER BY reserved_counter_id ASC
+                """,
+                Map.of("hospitalId", hospitalId, "category", category),
+                (rs, rowNum) -> new CounterReservation(rs.getInt("reserved_counter_id"), TOKEN_ROW_MAPPER.mapRow(rs, rowNum)));
+
+        return new CounterBoard(activeCounters, counters, lookAhead, upcoming);
     }
 
     /** Counter finished normally: token -> completed, next eligible waiting token takes the freed counter. */
-    public CounterBoard completeAtCounter(int counterId) {
-        finishCounter(counterId, "completed");
-        claimIntoCounter(counterId);
-        return getBoard();
+    public CounterBoard completeAtCounter(int hospitalId, String category, int counterId) {
+        finishCounter(hospitalId, category, counterId, "completed");
+        claimIntoCounter(hospitalId, category, counterId);
+        return getBoard(hospitalId, category);
     }
 
     /** Patient at this counter didn't show (admin gives up waiting): token -> missed, freed counter pulls the next one. */
-    public CounterBoard missAtCounter(int counterId) {
-        finishCounter(counterId, "missed");
-        claimIntoCounter(counterId);
-        return getBoard();
+    public CounterBoard missAtCounter(int hospitalId, String category, int counterId) {
+        finishCounter(hospitalId, category, counterId, "missed");
+        claimIntoCounter(hospitalId, category, counterId);
+        return getBoard(hospitalId, category);
     }
 
-    private int activeCounters() {
-        HospitalDto hospital = hospitalService.getOperatingHospital();
-        return hospital != null ? Math.max(1, hospital.getActiveCounters()) : 1;
-    }
-
-    /** First-time setup: nobody assigned to any counter yet -> seed counters 1..N off the front of the queue. */
-    private void ensureInitialAssignment(int activeCounters) {
+    /** First-time setup: nobody assigned to any counter yet in this department -> seed counters 1..N off the front of its queue. */
+    private void ensureInitialAssignment(int hospitalId, String category, int activeCounters) {
         Integer alreadyAssigned = jdbc.queryForObject(
-                "SELECT COUNT(*)::int FROM tokens WHERE status = 'serving' AND counter_id IS NOT NULL",
-                Collections.emptyMap(), Integer.class);
+                """
+                SELECT COUNT(*)::int FROM tokens
+                WHERE status = 'serving' AND counter_id IS NOT NULL AND hospital_id = :hospitalId AND category = :category
+                """,
+                Map.of("hospitalId", hospitalId, "category", category), Integer.class);
         if (alreadyAssigned != null && alreadyAssigned > 0) {
             return;
         }
         for (int c = 1; c <= activeCounters; c++) {
-            claimIntoCounter(c);
+            claimIntoCounter(hospitalId, category, c);
         }
     }
 
-    private void finishCounter(int counterId, String status) {
+    private void finishCounter(int hospitalId, String category, int counterId, String status) {
         String timeColumn = "completed".equals(status) ? "completed_at" : "missed_at";
+        Map<String, Object> params = new HashMap<>();
+        params.put("status", status);
+        params.put("c", counterId);
+        params.put("hospitalId", hospitalId);
+        params.put("category", category);
         List<TokenDto> rows = jdbc.query(
                 "UPDATE tokens SET status = :status, " + timeColumn + " = NOW(), counter_id = NULL "
-                        + "WHERE counter_id = :c AND status = 'serving' RETURNING *",
-                Map.of("status", status, "c", counterId), TOKEN_ROW_MAPPER);
+                        + "WHERE counter_id = :c AND status = 'serving' AND hospital_id = :hospitalId AND category = :category RETURNING *",
+                params, TOKEN_ROW_MAPPER);
         if (rows.isEmpty()) {
             return;
         }
@@ -122,13 +157,125 @@ public class CounterAssignmentService {
         }
     }
 
-    private void claimIntoCounter(int counterId) {
-        TokenDto claimed = queueManagerService.claimNextEligibleWaitingToken();
+    private void claimIntoCounter(int hospitalId, String category, int counterId) {
+        // The multi-counter variant (unlike single-counter's) reaches past a
+        // still-graced front-of-line token instead of blocking every counter
+        // on it -- see QueueManagerService#claimNextEligibleWaitingTokenForCounter.
+        TokenDto claimed = queueManagerService.claimNextEligibleWaitingTokenForCounter(hospitalId, category);
         if (claimed == null) {
             return;
         }
-        jdbc.update("UPDATE tokens SET counter_id = :c WHERE id = :id", Map.of("c", counterId, "id", claimed.getId()));
+        // reserved_counter_id = NULL is defensive: a status='waiting' row can
+        // carry a reservation, but the instant it's claimed it's no longer
+        // 'waiting' anyway, so this just avoids a stale tag lingering on the row.
+        jdbc.update("UPDATE tokens SET counter_id = :c, reserved_counter_id = NULL WHERE id = :id",
+                Map.of("c", counterId, "id", claimed.getId()));
         whatsAppService.sendWhatsAppMessage(claimed.getPhone(),
                 "🎉 It's your turn! Please proceed to Counter " + counterId + " for Token #" + claimed.getId() + ".");
+
+        int activeCounters = hospitalDepartmentService.activeCounters(hospitalId, category);
+        refreshReservations(hospitalId, category, activeCounters);
+    }
+
+    /**
+     * Advisory only -- never changes who's actually served next (that's still
+     * QueueManagerService#claimNextEligibleWaitingToken's call, at the moment
+     * a counter genuinely frees up). While multiple counters are
+     * simultaneously mid-treatment, this earmarks a *distinct* upcoming
+     * eligible waiting token to each busy counter that doesn't already have
+     * one, and pings that patient "you're up next for Counter X" so they can
+     * be ready before their counter is even free -- the "next 3 patients set
+     * at A, B, C" behavior. A counter that already has a valid reservation is
+     * left untouched (no notification churn); an existing reservation is
+     * dropped -- and its counter re-filled -- only once its held token is no
+     * longer waiting, or fails the same unverified/no-longer-graced
+     * eligibility check a real claim would apply. Called after every claim
+     * (so a newly-busy counter gets a reservation right away) and on every
+     * board read (so a reservation invalidated by e.g. a manual reposition --
+     * see QueueManagerService#movePatientToPosition -- gets refilled even
+     * without another claim event).
+     */
+    private void refreshReservations(int hospitalId, String category, int activeCounters) {
+        List<Integer> busyCounters = jdbc.query(
+                """
+                SELECT DISTINCT counter_id FROM tokens WHERE status = 'serving' AND counter_id IS NOT NULL
+                  AND counter_id <= :activeCounters AND hospital_id = :hospitalId AND category = :category
+                """,
+                Map.of("activeCounters", activeCounters, "hospitalId", hospitalId, "category", category),
+                (rs, rowNum) -> rs.getInt("counter_id"));
+        if (busyCounters.isEmpty()) {
+            return; // nobody's actually mid-treatment -- nothing to earmark ahead for
+        }
+
+        // Existing reservations: an unverified token whose grace has lapsed
+        // (or was never notified/graced at all) would be skipped-and-resolved
+        // by a real claim just like at claim time -- drop the reservation so
+        // its counter gets re-filled below.
+        List<Map<String, Object>> existing = jdbc.queryForList(
+                """
+                SELECT id, reserved_counter_id, is_verified, notified_ready_at FROM tokens
+                WHERE status = 'waiting' AND reserved_counter_id IS NOT NULL
+                  AND hospital_id = :hospitalId AND category = :category
+                """,
+                Map.of("hospitalId", hospitalId, "category", category));
+
+        List<Integer> countersStillValid = new ArrayList<>();
+        for (Map<String, Object> row : existing) {
+            boolean verified = Boolean.TRUE.equals(row.get("is_verified"));
+            boolean wasNotified = row.get("notified_ready_at") != null;
+            if (wasNotified && !verified) {
+                jdbc.update("UPDATE tokens SET reserved_counter_id = NULL WHERE id = :id", Map.of("id", row.get("id")));
+            } else {
+                countersStillValid.add((Integer) row.get("reserved_counter_id"));
+            }
+        }
+
+        List<Integer> needsReservation = new ArrayList<>();
+        for (Integer c : busyCounters) {
+            if (!countersStillValid.contains(c) && !needsReservation.contains(c)) {
+                needsReservation.add(c);
+            }
+        }
+        if (needsReservation.isEmpty()) {
+            return;
+        }
+        Collections.sort(needsReservation);
+
+        List<Map<String, Object>> candidates = jdbc.queryForList(
+                """
+                SELECT id, phone, is_verified, notified_ready_at FROM tokens
+                WHERE status = 'waiting' AND reserved_counter_id IS NULL
+                  AND hospital_id = :hospitalId AND category = :category
+                ORDER BY COALESCE(priority_rank, id) ASC
+                """,
+                Map.of("hospitalId", hospitalId, "category", category));
+
+        int nextCounterIdx = 0;
+        for (Map<String, Object> candidate : candidates) {
+            if (nextCounterIdx >= needsReservation.size()) {
+                break;
+            }
+            boolean verified = Boolean.TRUE.equals(candidate.get("is_verified"));
+            boolean wasNotified = candidate.get("notified_ready_at") != null;
+            if (wasNotified && !verified) {
+                continue; // same eligibility skip as a real claim -- not ready to be earmarked yet
+            }
+            int counterId = needsReservation.get(nextCounterIdx++);
+            int tokenId = (Integer) candidate.get("id");
+            // Guarded like every other claim/finish update in this class --
+            // status='waiting' AND reserved_counter_id IS NULL still true --
+            // so a concurrent refreshReservations run (e.g. two admin actions
+            // landing close together) can't double-book the same token onto
+            // two counters, and we only notify once we know we actually won.
+            int updated = jdbc.update(
+                    "UPDATE tokens SET reserved_counter_id = :c WHERE id = :id AND status = 'waiting' AND reserved_counter_id IS NULL",
+                    Map.of("c", counterId, "id", tokenId));
+            if (updated == 0) {
+                nextCounterIdx--; // lost the race -- this counter's slot is still open, retry it on the next candidate
+                continue;
+            }
+            whatsAppService.sendWhatsAppMessage((String) candidate.get("phone"),
+                    "🔔 You're up next for Counter " + counterId + "! Please be ready -- we'll call you there shortly.");
+        }
     }
 }
